--- a/views/user/myCart.ejs
+++ b/views/user/myCart.ejs
@@ -14,50 +14,54 @@
             </div>
             
                 <form action="" class="mb-3 space-y-3 ">
+                    
                     <% Mycart.forEach(function(product){%>
                     <div class="bg-white rounded-md px-5 py-3 space-y-3 drop-shadow-md cursor-pointer lg:first:rounded-t-none"><!--get it by -->
-                        <div class="flex space-x-3">
-                            <div class="w-4/12 flex flex-col items-center  border-r pr-3 ">
-                                <div class="w-full ">
-                                    <img class="w-full h-28 object-contain" src="<%=product.imageUrl %>" alt="">
+                        <a href="/user/product/<%= encodeURIComponent(product._id)%>" class="block w-full">
+                            <div class="flex space-x-3 w-full">
+                                <div class="w-4/12 flex flex-col items-center  border-r pr-3 ">
+                                    <div class="w-full ">
+                                        <img class="w-full h-28 object-contain" src="<%=product.imageUrl %>" alt="">
+                                    </div>
+                                   <div class="w-full text-center flex justify-center">
+                                     <p class="whitespace-nowrap text-xs text-center mt-2 text-[#4B727A] font-semibold max-w-[96px] lg:max-w-[400px] truncate  "><%=product.bookName %></p>
+                                   </div>
                                 </div>
-                               <div class="w-full text-center flex justify-center">
-                                 <p class="whitespace-nowrap text-xs text-center mt-2 text-[#4B727A] font-semibold max-w-[96px] lg:max-w-[400px] truncate  "><%=product.bookName %></p>
-                               </div>
-                            </div>
-                            <div class=" lg:flex lg:justify-between w-full  lg:w-full">
-                                <div class="space-y-1 ">
-                                    <p class="text-[#4B727A] mb-[-5px] font-semibold text-base max-w-[180px] lg:max-w-[5r00px] truncate lg:text-xl"><%=product.bookName %></p>
-                                    <p class="text-[#5E8E99] font-light text-sm lg:text-base"><%=product.author %></p>
-                                    <div class="flex items-center space-x-1">
-                                    <div class="bg-[#008000] w-fit px-1 py-1 text-xs text-white rounded-md lg:text-sm lg:py-2 lg:px-2 lg:font-medium">
-                                        <p><%=product.discount %>% off</p>
-                                    </div>
-                                     <p class="text-xs text-[#666666] line-through lg:text-sm">MRP <%=product.MRP %></p>
-                                    </div>
-                                    <P class="font-semibold text-lg lg:text-xl">₹<%=product.salePrice %></P>
-                                     </div>
-                                
-                                <div class="w-full  lg:w-fit space-x-3 flex lg:flex-col lg:justify-center lg:space-y-3 lg:items-center text-white product"   data-product-id="<%=product._id %>">
-                                    <a href="/user/myCart/removeProduct/<%-product._id %>" class="w-1/2  lg:ml-3 lg:w-fit lg:px-8 text-black border-[#DAA520] border-[.1px] py-1 rounded-md font-medium">
-                                        Remove
-                                    </a>
-                                    <div class="w-1/2 lg:w-fit lg:px-6 select-none  bg-[#DAA520] py-2 rounded-md flex-col font-semibold flex items-center  text-white   px-3  text-xs space-x-1">
-                                        <div class="flex space-x-1 md:space-x-3 lg:space-x-1">
-                                            <p class="font-semibold">Qty</p>
-                                            <button type="button" class="quantity-minus bg-white rounded-full h-fit w px-[2px] py-[2px] text-black flex items-center justify-center">
-                                                <span class="material-symbols-outlined text-[12px]">remove</span>
-                                            </button>
-                                            <span class="quantity-display" id="quantity-display-<%-product._id %>"><%= product.quantity %></span>
-                                            <button type="button" class="quantity-plus bg-white rounded-full h-fit w-fit px-[2px] py-[2px] text-black flex items-center justify-center">
-                                                <span class="material-symbols-outlined text-[12px]">add</span>
-                                            </button>
+                                <div class=" lg:flex lg:justify-between w-full  lg:w-full">
+                                    <div class="space-y-1 ">
+                                        <p class="text-[#4B727A] mb-[-5px] font-semibold text-base max-w-[180px] lg:max-w-[5r00px] truncate lg:text-xl"><%=product.bookName %></p>
+                                        <p class="text-[#5E8E99] font-light text-sm lg:text-base"><%=product.author %></p>
+                                        <div class="flex items-center space-x-1">
+                                        <div class="bg-[#008000] w-fit px-1 py-1 text-xs text-white rounded-md lg:text-sm lg:py-2 lg:px-2 lg:font-medium">
+                                            <p><%=product.discount %>% off</p>
                                         </div>
-                                        
+                                         <p class="text-xs text-[#666666] line-through lg:text-sm">MRP <%=product.MRP %></p>
+                                        </div>
+                                        <P class="font-semibold text-lg lg:text-xl">₹<%=product.salePrice %></P>
+                                         </div>
+                                    
+                                    <div class="w-full  lg:w-fit space-x-3 flex lg:flex-col lg:justify-center lg:space-y-3 lg:items-center text-white product"   data-product-id="<%=product._id %>">
+                                        <a href="/user/myCart/removeProduct/<%-product._id %>" class="w-1/2  lg:ml-3 lg:w-fit lg:px-8 text-black border-[#DAA520] border-[.1px] py-1 rounded-md font-medium">
+                                            Remove
+                                        </a>
+                                        <div class="w-1/2 lg:w-fit lg:px-6 select-none  bg-[#DAA520] py-2 rounded-md flex-col font-semibold flex items-center  text-white   px-3  text-xs space-x-1">
+                                            <div class="flex space-x-1 md:space-x-3 lg:space-x-1">
+                                                <p class="font-semibold">Qty</p>
+                                                <button type="button" class="quantity-minus bg-white rounded-full h-fit w px-[2px] py-[2px] text-black flex items-center justify-center">
+                                                    <span class="material-symbols-outlined text-[12px]">remove</span>
+                                                </button>
+                                                <span class="quantity-display" id="quantity-display-<%-product._id %>"><%= product.quantity %></span>
+                                                <button type="button" class="quantity-plus bg-white rounded-full h-fit w-fit px-[2px] py-[2px] text-black flex items-center justify-center">
+                                                    <span class="material-symbols-outlined text-[12px]">add</span>
+                                                </button>
+                                            </div>
+                                            
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
+                       
                     </div>
                     <%  }) %>
 
@@ -119,6 +123,7 @@
           
         </div>
     </main>
+    
     <div class="flex-grow"></div>
     <div class="px-3  lg:px-52 fixed bottom-0 w-full bg-white pt-2 flex justify-between">
         <div class="flex flex-col items-center space-y-[-5px] ">
