--- a/views/user/wishList.ejs
+++ b/views/user/wishList.ejs
@@ -10,74 +10,49 @@
     <main class="pb-16">
         <div class="px-4 mt-5 lg:px-52">
                 <div class="my-3 mt-5 space-y-3"><!--Continer-->
-                    <div class="bg-white rounded-md px-5 py-3 space-y-3 drop-shadow-md cursor-pointer"><!--get it by -->
-                        <div class="flex space-x-3">
-                            <div class="w-4/12 flex flex-col items-center  border-r pr-3 ">
-                                <div class="w-full ">
-                                    <img class="w-full h-28 object-contain" src="/images/alchemist.jpeg" alt="">
+                    <% if(wishList.length<1) {%>
+                        <div class="my-auto mx-auto absolute inset-0 flex items-center justify-center mb-52 md:mb-0 ">
+                            <img class="w-2/3 md:w-72 mx-auto opacity-30" src="/images/No_Product_Found.png" alt="No products found">
+                          </div>
+                    <% } %>
+                    <% wishList.forEach(function(data){%>
+                        <div class="bg-white rounded-md px-5 py-3 space-y-3 drop-shadow-md cursor-pointer"><!--get it by -->
+                            <div class="flex space-x-3">
+                                <div class="w-4/12 flex flex-col items-center  border-r pr-3 ">
+                                    <div class="w-full ">
+                                        <img class="w-full h-28 object-contain" src="<%=data.imageUrl %>" alt="">
+                                    </div>
+                                   <div class="w-full text-center flex justify-center">
+                                     <p class="whitespace-nowrap text-xs text-center mt-2 text-[#4B727A] font-semibold max-w-[96px] lg:max-w-[400px] truncate capitalize "><%=data.bookName %></p>
+                                   </div>
                                 </div>
-                               <div class="w-full text-center flex justify-center">
-                                 <p class="whitespace-nowrap text-xs text-center mt-2 text-[#4B727A] font-semibold max-w-[96px] lg:max-w-[400px] truncate  ">The Alchemist</p>
-                               </div>
-                            </div>
-                            <div class=" lg:flex lg:justify-between w-full  lg:w-full">
-                                <div class="space-y-1 ">
-                                    <p class="text-[#4B727A] mb-[-5px] font-semibold text-base max-w-[180px] lg:max-w-[5r00px] truncate lg:text-xl">The Alchemist  </p>
-                                    <p class="text-[#5E8E99] font-light text-sm lg:text-base">Paulo Coelho</p>
-                                    <div class="flex items-center space-x-1">
-                                    <div class="bg-[#008000] w-fit px-1 py-1 text-xs text-white rounded-md lg:text-sm lg:py-2 lg:px-2 lg:font-medium">
-                                        <p>15% off</p>
+                                <div class=" lg:flex lg:justify-between w-full  lg:w-full">
+                                    <div class="space-y-1 ">
+                                        <p class="text-[#4B727A] mb-[-5px] font-semibold text-base max-w-[180px] lg:max-w-[5r00px] truncate lg:text-xl capitalize"><%=data.bookName %> </p>
+                                        <p class="text-[#5E8E99] font-light text-sm lg:text-base capitalize"><%=data.author %></p>
+                                        <div class="flex items-center space-x-1">
+                                        <div class="bg-[#008000] w-fit px-1 py-1 text-xs text-white rounded-md lg:text-sm lg:py-2 lg:px-2 lg:font-medium">
+                                            <p><%=data.discount %>% off</p>
+                                        </div>
+                                         <p class="text-xs text-[#666666] line-through lg:text-sm">MRP <%=data.MRP %></p>
+                                        </div>
+                                        <P class="font-semibold text-lg lg:text-xl">₹<%=data.salePrice %></P>
+                                         </div>
+                                    
+                                    <div class="w-full  lg:w-fit space-x-3 flex lg:flex-col lg:justify-center lg:space-y-3 lg:items-center text-white">
+                                        <a href="/user/wishlist/remove/<%-data._id %>" class="w-1/2 lg:ml-3 lg:w-fit lg:px-6 text-black border-[#DAA520] border-[.1px] py-1 rounded-md font-semibold">
+                                            Remove
+                                        </a>
+                                        <button class="w-1/2 lg:w-fit lg:px-6 bg-[#DAA520] py-1 rounded-md font-semibold">
+                                            Buy now
+                                        </button>
                                     </div>
-                                     <p class="text-xs text-[#666666] line-through lg:text-sm">MRP 250</p>
-                                    </div>
-                                    <P class="font-semibold text-lg lg:text-xl">₹150</P>
-                                     </div>
-                                
-                                <div class="w-full  lg:w-fit space-x-3 flex lg:flex-col lg:justify-center lg:space-y-3 lg:items-center text-white">
-                                    <button class="w-1/2 lg:ml-3 lg:w-fit lg:px-6 text-black border-[#DAA520] border-[.1px] py-1 rounded-md font-semibold">
-                                        Remove
-                                    </button>
-                                    <button class="w-1/2 lg:w-fit lg:px-6 bg-[#DAA520] py-1 rounded-md font-semibold">
-                                        Buy now
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bg-white rounded-md px-5 py-3 space-y-3 drop-shadow-md cursor-pointer"><!--get it by -->
-                        <div class="flex space-x-3">
-                            <div class="w-4/12 flex flex-col items-center  border-r pr-3 ">
-                                <div class="w-full ">
-                                    <img class="w-full h-28 object-contain" src="/images/alchemist.jpeg" alt="">
-                                </div>
-                               <div class="w-full text-center flex justify-center">
-                                 <p class="whitespace-nowrap text-xs text-center mt-2 text-[#4B727A] font-semibold max-w-[96px] lg:max-w-[400px] truncate  ">The Alchemist</p>
-                               </div>
-                            </div>
-                            <div class=" lg:flex lg:justify-between w-full  lg:w-full">
-                                <div class="space-y-1 ">
-                                    <p class="text-[#4B727A] mb-[-5px] font-semibold text-base max-w-[180px] lg:max-w-[5r00px] truncate lg:text-xl">The Alchemist  </p>
-                                    <p class="text-[#5E8E99] font-light text-sm lg:text-base">Paulo Coelho</p>
-                                    <div class="flex items-center space-x-1">
-                                    <div class="bg-[#008000] w-fit px-1 py-1 text-xs text-white rounded-md lg:text-sm lg:py-2 lg:px-2 lg:font-medium">
-                                        <p>15% off</p>
-                                    </div>
-                                     <p class="text-xs text-[#666666] line-through lg:text-sm">MRP 250</p>
-                                    </div>
-                                    <P class="font-semibold text-lg lg:text-xl">₹150</P>
-                                     </div>
-                                
-                                <div class="w-full  lg:w-fit space-x-3 flex lg:flex-col lg:justify-center lg:space-y-3 lg:items-center text-white">
-                                    <button class="w-1/2 lg:ml-3 lg:w-fit lg:px-6 text-black border-[#DAA520] border-[.1px] py-1 rounded-md font-semibold">
-                                        Remove
-                                    </button>
-                                    <button class="w-1/2 lg:w-fit lg:px-6 bg-[#DAA520] py-1 rounded-md font-semibold">
-                                        Buy now
-                                    </button>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                   <% })  %> 
+                    
+                   
                 </div>
         </div>
     </main>
